--- a/build.gradle
+++ b/build.gradle
@@ -25,9 +25,10 @@ dependencies {
     compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.5'
     // https://mvnrepository.com/artifact/com.google.code.gson/gson
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
-
+    compile 'org.springframework.amqp:spring-rabbit:2.2.10.RELEASE'
 // https://mvnrepository.com/artifact/org.springframework/spring-jdbc
     compile group: 'org.springframework', name: 'spring-jdbc', version: '5.2.8.RELEASE'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
     // https://mvnrepository.com/artifact/org.springframework/spring-tx
     compile group: 'org.springframework', name: 'spring-tx', version: '5.2.8.RELEASE'
     compile group: 'org.springframework.integration', name: 'spring-integration-core', version: '5.3.2.RELEASE'
